--- a/NewScheduler/res/layout/activity_main.xml
+++ b/NewScheduler/res/layout/activity_main.xml
@@ -12,11 +12,12 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="33dp"
         android:background="#ff9999"
         android:height="50dp"
         android:padding="5dp"
-        android:text="2015.11.25\n오픈소스 프로젝트 진행하기" />
+        android:text="@+String/2015.11.25\n오픈소스 프로젝트 진행하기" />
 
 </RelativeLayout>
