--- a/NewScheduler/res/layout/add_schedule.xml
+++ b/NewScheduler/res/layout/add_schedule.xml
@@ -16,6 +16,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="53dp"
         android:orientation="vertical" >
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <requestFocus />
+        </EditText>
+
     </LinearLayout>
 
 </RelativeLayout>
