--- a/NewScheduler/res/layout/activity_main.xml
+++ b/NewScheduler/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:paddingBottom="0dp"
+    android:background="@style/AppTheme"
+    android:paddingBottom="10dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     tools:context="kmu.tp.newscheduler.MainActivity" >
-
+    
     <RelativeLayout
         android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
