--- a/NewScheduler/res/layout/add_schedule.xml
+++ b/NewScheduler/res/layout/add_schedule.xml
@@ -70,6 +70,11 @@
         android:layout_below="@+id/relativeLayout2" >
 
         <TextView
+	        android:id="@+id/txtTime"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content" />
+        
+        <TextView
             android:id="@+id/plan_view_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -81,7 +86,8 @@
             android:text="시작"
             android:textSize="20dp" />
         
-        <EditText
+        
+        <Button
             android:id="@+id/plan_btn_startDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -90,11 +96,9 @@
             android:layout_alignBottom="@+id/plan_view_start"
             android:layout_toRightOf="@+id/plan_view_start"
             android:layout_marginLeft="10dp"
-            android:hint="시작 날짜"
-            android:ems="5"
-            android:inputType="date"
+            android:text="시작 날짜"
             android:paddingLeft="20px" />
-        <EditText
+        <Button
             android:id="@+id/plan_btn_startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -102,9 +106,7 @@
             android:layout_alignBottom="@+id/plan_btn_startDate"
             android:layout_toRightOf="@+id/plan_btn_startDate"
             android:layout_marginLeft="10dp"
-            android:hint="시작 날짜"
-            android:ems="5"
-            android:inputType="time"
+            android:text="시작 시간"
             android:paddingLeft="20px" />
 
         <TextView
@@ -116,11 +118,12 @@
            android:paddingTop="15px"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/plan_view_start"
+           android:layout_marginTop="17dp"
            android:text="종료"
            android:textSize="20dp" />
         
         
-         <EditText
+         <Button
             android:id="@+id/plan_btn_endDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -129,11 +132,9 @@
             android:layout_alignBottom="@+id/plan_view_end"
             android:layout_toRightOf="@+id/plan_view_end"
             android:layout_marginLeft="10dp"
-            android:hint="종료 날짜"
-            android:ems="5"
-            android:inputType="date"
+            android:text="종료 날짜"
             android:paddingLeft="20px" />
-        <EditText
+        <Button
             android:id="@+id/plan_btn_endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -141,9 +142,7 @@
             android:layout_alignBottom="@+id/plan_btn_endDate"
             android:layout_toRightOf="@+id/plan_btn_endDate"
             android:layout_marginLeft="10dp"
-            android:hint="종료 시간"
-            android:ems="5"
-            android:inputType="time"
+            android:text="종료 시간"
             android:paddingLeft="20px" />
         
         
@@ -173,14 +172,6 @@
 
             <requestFocus />
         </EditText>
-
-          <TimePicker
-              android:id="@+id/timePicker1"
-              android:layout_width="100dp"
-              android:layout_height="wrap_content"
-              android:layout_alignParentRight="true"
-              android:layout_below="@+id/plan_text_content"
-              android:layout_toRightOf="@+id/plan_btn_endDate" />
 
     </RelativeLayout>
 
