--- a/NewScheduler/res/layout/add_schedule.xml
+++ b/NewScheduler/res/layout/add_schedule.xml
@@ -70,11 +70,6 @@
         android:layout_below="@+id/relativeLayout2" >
 
         <TextView
-	        android:id="@+id/txtTime"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content" />
-        
-        <TextView
             android:id="@+id/plan_view_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,7 +91,7 @@
             android:layout_alignBottom="@+id/plan_view_start"
             android:layout_toRightOf="@+id/plan_view_start"
             android:layout_marginLeft="10dp"
-            android:text="시작 날짜"
+            android:text="날짜"
             android:paddingLeft="20px" />
         <Button
             android:id="@+id/plan_btn_startTime"
@@ -106,8 +101,17 @@
             android:layout_alignBottom="@+id/plan_btn_startDate"
             android:layout_toRightOf="@+id/plan_btn_startDate"
             android:layout_marginLeft="10dp"
-            android:text="시작 시간"
+            android:text="시간"
             android:paddingLeft="20px" />
+        
+        <TextView
+	        android:id="@+id/txtTime"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBaseline="@+id/plan_btn_startTime"
+            android:layout_alignBottom="@+id/plan_btn_startTime"
+            android:layout_toRightOf="@+id/plan_btn_startTime"
+            android:hint="" />
 
         <TextView
            android:id="@+id/plan_view_end"
@@ -132,7 +136,7 @@
             android:layout_alignBottom="@+id/plan_view_end"
             android:layout_toRightOf="@+id/plan_view_end"
             android:layout_marginLeft="10dp"
-            android:text="종료 날짜"
+            android:text="날짜"
             android:paddingLeft="20px" />
         <Button
             android:id="@+id/plan_btn_endTime"
@@ -142,10 +146,17 @@
             android:layout_alignBottom="@+id/plan_btn_endDate"
             android:layout_toRightOf="@+id/plan_btn_endDate"
             android:layout_marginLeft="10dp"
-            android:text="종료 시간"
+            android:text="시간"
             android:paddingLeft="20px" />
         
-        
+        <TextView
+	        android:id="@+id/txtTime2"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBaseline="@+id/plan_btn_endTime"
+            android:layout_alignBottom="@+id/plan_btn_endTime"
+            android:layout_toRightOf="@+id/plan_btn_endTime"
+            android:hint="" />
         <TextView
            android:id="@+id/plan_view_content"
            android:layout_width="wrap_content"
