--- a/NewScheduler/res/layout/detail_schedule.xml
+++ b/NewScheduler/res/layout/detail_schedule.xml
@@ -14,31 +14,28 @@
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="51dp" >
+        android:layout_marginBottom="30dp" >
 
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="1px"
-            android:background="#FFD8D8"
-            android:visibility="visible" />
-
-        <Button
+        <ImageButton
             android:id="@+id/todo_btn_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_marginRight="53dp"
-            android:text="삭제" />
+            android:background="@drawable/ic_delete"
+            android:text="this text is invisible" />
 
-        <Button
-            android:id="@+id/todo_btn_modification"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="43dp"
-            android:layout_toLeftOf="@+id/todo_btn_delete"
-            android:text="수정" />
+         <ImageButton
+             android:id="@+id/todo_btn_modification"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentLeft="true"
+             android:layout_alignParentTop="true"
+             android:layout_marginLeft="68dp"
+             android:background="@drawable/ic_modify"
+             android:text="this text is invisible" />
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -47,11 +44,12 @@
         android:layout_height="35dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/relativeLayout3" >
+
         <View
-        android:layout_width="wrap_content"
-        android:layout_height="1px"
-        android:background="#FFD8D8"
-        android:visibility="visible" />
+            android:layout_width="wrap_content"
+            android:layout_height="1px"
+            android:background="#FFD8D8"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/todo_icon_explanation"
@@ -169,7 +167,6 @@
             android:layout_alignParentRight="true"
             android:background="@drawable/ic_cancel"
             android:text="this text is invisible" />
-
     </RelativeLayout>
 
     <View
@@ -180,5 +177,16 @@
         android:layout_marginTop="16dp"
         android:background="#FFD8D8"
         android:visibility="visible" />
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1px"
+        android:layout_above="@+id/relativeLayout5"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="26dp"
+        android:background="#FFD8D8"
+        android:visibility="visible" />
+
+    
 
 </RelativeLayout>
