지현_인터페이스

--- a/NewScheduler/res/layout/detail_schedule.xml
+++ b/NewScheduler/res/layout/detail_schedule.xml
@@ -86,6 +86,16 @@
         android:layout_below="@+id/relativeLayout2"
         android:layout_marginTop="18dp" >
 
+        <TextView
+            android:id="@+id/todo_icon_state"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="20px"
+            android:paddingRight="20px"
+            android:paddingTop="15px"
+            android:text="상태"
+            android:textSize="15dp" />
         <Button
             android:id="@+id/todo_btn_finSchedule"
             android:layout_width="wrap_content"
@@ -99,16 +109,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_toLeftOf="@+id/todo_btn_finSchedule"
             android:text="진행중" />
 
         <Button
             android:id="@+id/todo_btn_beforeSchedule"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/todo_btn_ingSchedule"
             android:text="시작전" />
+
     </RelativeLayout>
 
     <RelativeLayout
