20151204 1454 파일추가 및 메인 수정

--- a/NewScheduler/res/layout/activity_main.xml
+++ b/NewScheduler/res/layout/activity_main.xml
@@ -1,5 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+<RelativeLayout 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="0dp"
@@ -39,8 +43,11 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/relativeLayout1"
-        android:background="#f7f7f7" >
+        android:background="#f7f7f7"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbars="vertical" >
 
     </RelativeLayout>
 
 </RelativeLayout>
+</ScrollView>
