--- a/NewScheduler/res/layout/detail_schedule.xml
+++ b/NewScheduler/res/layout/detail_schedule.xml
@@ -16,25 +16,25 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="30dp" >
 
-         <ImageButton
-             android:id="@+id/todo_btn_delete"
-             android:layout_width="70dp"
-             android:layout_height="70dp"
-             android:layout_alignParentTop="true"
-             android:layout_marginLeft="77dp"
-             android:layout_toRightOf="@+id/todo_btn_modification"
-             android:background="@drawable/ic_delete"
-             android:text="this text is invisible" />
+        <ImageButton
+            android:id="@+id/todo_btn_modification"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="62dp"
+            android:background="@drawable/ic_modify"
+            android:text="this text is invisible" />
 
-         <ImageButton
-             android:id="@+id/todo_btn_modification"
-             android:layout_width="70dp"
-             android:layout_height="70dp"
-             android:layout_alignParentLeft="true"
-             android:layout_alignParentTop="true"
-             android:layout_marginLeft="50dp"
-             android:background="@drawable/ic_modify"
-             android:text="this text is invisible" />
+        <ImageButton
+            android:id="@+id/todo_btn_delete"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="56dp"
+            android:layout_toRightOf="@+id/todo_btn_modification"
+            android:background="@drawable/ic_delete"
+            android:text="this text is invisible" />
 
     </RelativeLayout>
 
@@ -59,7 +59,7 @@
             android:paddingLeft="20px"
             android:paddingRight="20px"
             android:paddingTop="15px"
-            android:text="설명"
+            android:text="세부사항"
             android:textSize="20dp" />
     </RelativeLayout>
 
@@ -96,6 +96,7 @@
             android:paddingTop="15px"
             android:text="상태"
             android:textSize="15dp" />
+
         <Button
             android:id="@+id/todo_btn_finSchedule"
             android:layout_width="wrap_content"
@@ -119,7 +120,6 @@
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/todo_btn_ingSchedule"
             android:text="시작전" />
-
     </RelativeLayout>
 
     <RelativeLayout
@@ -141,19 +141,18 @@
             android:text="제목"
             android:textSize="20dp" />
 
-         <RatingBar
-             android:id="@+id/todo_btn_setPriority"
-             style="?android:attr/ratingBarStyleIndicator"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_alignParentRight="true"
-             android:layout_alignParentTop="true"
-             android:layout_marginRight="17dp"
-             android:duplicateParentState="true"
-             android:minHeight="48dp"
-             android:numStars="1"
-             android:rating="0" />
-        
+        <RatingBar
+            android:id="@+id/todo_btn_setPriority"
+            style="?android:attr/ratingBarStyleIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="17dp"
+            android:duplicateParentState="true"
+            android:minHeight="48dp"
+            android:numStars="1"
+            android:rating="0" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -185,7 +184,6 @@
             android:layout_marginRight="16dp"
             android:background="@drawable/ic_cancel"
             android:text="this text is invisible" />
-
     </RelativeLayout>
 
     <View
@@ -197,6 +195,32 @@
         android:background="#FFD8D8"
         android:visibility="visible" />
 
-    
+    <RelativeLayout
+        android:id="@+id/relativeLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_above="@+id/relativeLayout5" >
+
+        <TextView
+            android:id="@+id/todo_view_detail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginDown="20dp"
+            android:text="TextView" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/relativeLayout6"
+        android:layout_marginTop="52dp" >
+    </RelativeLayout>
 
 </RelativeLayout>
